--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clsx": "1.1.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "recharts": "2.0.0-beta.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
